--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,10 +1,10 @@
 body {
   background-color: rgb(248, 244, 244);
 }
-/* img {
-  margin: 0;
-  padding: 0;
-} */
+a {
+  text-decoration: none;
+  color: inherit;
+}
 /* ========FORM========== */
 .search-form {
   height: 70px;
@@ -44,21 +44,20 @@ body {
 .box {
   margin: 0px auto;
   max-width: 1300px;
-  padding-top: 70px;
+  padding: 70px 15px;
 }
 /* ===============GALLERY================== */
 .gallery {
   display: flex;
   flex-wrap: wrap;
-  margin-left: -15px;
-  margin-top: -15px;
-  align-items: center;
+  margin-left: -10px;
+  margin-top: -10px;
 }
 
 .photo-card {
-  margin-left: 15px;
-  margin-top: 15px;
-  flex-basis: calc((100% - 60px) / 4);
+  margin-left: 10px;
+  margin-top: 10px;
+  flex-basis: calc((100% - 40px) / 4);
   box-shadow: 4px 4px 8px 0 rgb(34 60 80 / 20%);
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -67,14 +66,12 @@ body {
 .img {
   object-fit: cover;
   display: block;
-  width: 100%;
 }
 
 .info {
   display: flex;
   background-color: rgba(138, 162, 206, 0.445);
   justify-content: space-around;
-  width: 100%;
   padding: 0 3px;
   font-size: 14px;
   border-bottom-right-radius: 10px;
